Greek translations update.
(Old svn revision: 22898)

--- a/po/el.po
+++ b/po/el.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.8beta2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-08-26 14:01+0200\n"
-"PO-Revision-Date: 2006-06-25 14:14+0200\n"
+"PO-Revision-Date: 2006-08-27 02:10+0200\n"
 "Last-Translator: Stavros Giannouris <stavrosg2002@freemail.gr>\n"
 "Language-Team: Greek <nls@tux.hellug.gr>\n"
 "MIME-Version: 1.0\n"
@@ -20,46 +20,46 @@ msgstr ""
 #: ../exo/exo-cell-renderer-ellipsized-text.c:138
 #: ../exo/exo-cell-renderer-icon.c:145
 msgid "Follow state"
-msgstr ""
+msgstr "Παρακολούθηση κατάστασης"
 
 #: ../exo/exo-cell-renderer-ellipsized-text.c:139
 #: ../exo/exo-cell-renderer-icon.c:146
 msgid "Render differently based on the selection state."
-msgstr ""
+msgstr "Διαφορετική απεικόνιση ανάλογα με την κατάσταση επιλογής."
 
 #: ../exo/exo-cell-renderer-icon.c:167
-#, fuzzy
 msgid "Icon"
-msgstr "Ε_ικονίδιο:"
+msgstr "Εικονίδιο"
 
 #: ../exo/exo-cell-renderer-icon.c:168
 msgid "The icon to render."
-msgstr ""
+msgstr "Το εικονίδιο που θα προβληθεί."
 
 #: ../exo/exo-cell-renderer-icon.c:189
-#, fuzzy
 msgid "size"
-msgstr "Χρήση αποσιωπητικών"
+msgstr "μέγεθος"
 
 #: ../exo/exo-cell-renderer-icon.c:190
 msgid "The size of the icon to render in pixels."
-msgstr ""
+msgstr "Το μέγεθος του εικονιδίου σε pixel."
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:770
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to open file \"%s\": %s"
-msgstr "Το άνοιγμα του \"%s\" απέτυχε."
+msgstr "Το άνοιγμα του αρχείου \"%s\" απέτυχε: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:832
-#, fuzzy, c-format
+#, c-format
 msgid "Failed to read file \"%s\": %s"
-msgstr "Η δημιουργία του \"%s\" απέτυχε."
+msgstr "Η ανάγνωση του αρχείου \"%s\" απέτυχε: %s"
 
 #: ../exo/exo-gdk-pixbuf-extensions.c:873
 #, c-format
 msgid ""
 "Failed to load image \"%s\": Unknown reason, probably a corrupt image file"
 msgstr ""
+"Η φόρτωσης της εικόνας \"%s\" απέτυχε: Ο λόγος είναι άγνωστος, πιθανόν "
+"πρόκειται για κατεστραμμένο αρχείο εικόνας"
 
 #: ../exo/exo-icon-bar.c:249 ../exo/exo-icon-view.c:774
 msgid "Orientation"
@@ -127,41 +127,38 @@ msgstr "Χρώμα κειμένου κέρσορα"
 
 #. EXO_ICON_CHOOSER_CONTEXT_ACTIONS
 #: ../exo/exo-icon-chooser-dialog.c:85
-#, fuzzy
 msgid "Action Icons"
-msgstr "Επιλογή εικονιδίου"
+msgstr "Εικονίδια δράσεων"
 
 #. EXO_ICON_CHOOSER_CONTEXT_ANIMATIONS
 #: ../exo/exo-icon-chooser-dialog.c:87
 msgid "Animations"
-msgstr ""
+msgstr "Κινούμενες εικόνες"
 
 #. EXO_ICON_CHOOSER_CONTEXT_APPLICATIONS
 #: ../exo/exo-icon-chooser-dialog.c:89
-#, fuzzy
 msgid "Application Icons"
-msgstr "Κουμπί επιλογής εφαρμογών"
+msgstr "Εικονίδια εφαρμογών"
 
 #. EXO_ICON_CHOOSER_CONTEXT_CATEGORIES
 #: ../exo/exo-icon-chooser-dialog.c:91
 msgid "Menu Icons"
-msgstr ""
+msgstr "Εικονίδια μενού"
 
 #. EXO_ICON_CHOOSER_CONTEXT_DEVICES
 #: ../exo/exo-icon-chooser-dialog.c:93
 msgid "Device Icons"
-msgstr ""
+msgstr "Εικονίδια συσκευών"
 
 #. EXO_ICON_CHOOSER_CONTEXT_EMBLEMS
 #: ../exo/exo-icon-chooser-dialog.c:95
 msgid "Emblems"
-msgstr ""
+msgstr "Εμβλήματα"
 
 #. EXO_ICON_CHOOSER_CONTEXT_EMOTES
 #: ../exo/exo-icon-chooser-dialog.c:97
-#, fuzzy
 msgid "Emoticons"
-msgstr "Χωρίς εικονίδιο"
+msgstr "Φατσούλες"
 
 #. EXO_ICON_CHOOSER_CONTEXT_INTERNATIONAL
 #: ../exo/exo-icon-chooser-dialog.c:99
@@ -171,29 +168,27 @@ msgstr ""
 #. EXO_ICON_CHOOSER_CONTEXT_MIME_TYPES
 #: ../exo/exo-icon-chooser-dialog.c:101
 msgid "File Type Icons"
-msgstr ""
+msgstr "Εικονίδια τύπων αρχείων"
 
 #. EXO_ICON_CHOOSER_CONTEXT_PLACES
 #: ../exo/exo-icon-chooser-dialog.c:103
 msgid "Location Icons"
-msgstr ""
+msgstr "Εικονίδια τοποθεσιών"
 
 #. EXO_ICON_CHOOSER_CONTEXT_STATUS
 #: ../exo/exo-icon-chooser-dialog.c:105
-#, fuzzy
 msgid "Status Icons"
-msgstr "Επιλογή εικονιδίου"
+msgstr "Εικονίδια κατάστασης"
 
 #. EXO_ICON_CHOOSER_CONTEXT_OTHER
 #: ../exo/exo-icon-chooser-dialog.c:107
 msgid "Uncategorized Icons"
-msgstr ""
+msgstr "Εικονίδια χωρίς κατηγορία"
 
 #. EXO_ICON_CHOOSER_CONTEXT_ALL
 #: ../exo/exo-icon-chooser-dialog.c:111
-#, fuzzy
 msgid "All Icons"
-msgstr "Κείμενο για Όλ_α τα εικονίδια"
+msgstr "Όλα τα εικονίδια"
 
 #. EXO_ICON_CHOOSER_CONTEXT_FILE
 #: ../exo/exo-icon-chooser-dialog.c:115 ../exo/exo-icon-chooser-dialog.c:262
@@ -202,9 +197,8 @@ msgstr "Εικόνες"
 
 #. setup the header label
 #: ../exo/exo-icon-chooser-dialog.c:205
-#, fuzzy
 msgid "Select _icon from:"
-msgstr "Λειτουργία επιλογής"
+msgstr "Επιλογή ε_ικονιδίου από:"
 
 #: ../exo/exo-icon-view.c:642
 msgid "Column Spacing"
@@ -356,32 +350,32 @@ msgstr "Αδιαφάνεια κουτιού επιλογής"
 
 #: ../exo/exo-thumbnail-preview.c:123
 msgid "Preview"
-msgstr ""
+msgstr "Προεπισκόπηση"
 
 #: ../exo/exo-thumbnail-preview.c:139 ../exo/exo-thumbnail-preview.c:281
-#, fuzzy
 msgid "No file selected"
-msgstr "Δεν επιλέχθηκε εφαρμογή"
+msgstr "Δεν επιλέχθηκε αρχείο"
 
 #: ../exo/exo-thumbnail-preview.c:299
 msgid "Block Device"
-msgstr ""
+msgstr "Συσκευή μπλοκ"
 
 #: ../exo/exo-thumbnail-preview.c:304
 msgid "Character Device"
-msgstr ""
+msgstr "Συσκευή χαρακτήρα"
 
 #: ../exo/exo-thumbnail-preview.c:309
 msgid "Folder"
-msgstr ""
+msgstr "Φάκελος"
 
 #: ../exo/exo-thumbnail-preview.c:314
 msgid "FIFO"
-msgstr ""
+msgstr "FIFO"
 
 #: ../exo/exo-thumbnail-preview.c:319
+#, fuzzy
 msgid "Socket"
-msgstr ""
+msgstr "Υποδοχή"
 
 #: ../exo/exo-toolbars-editor-dialog.c:126
 msgid "_Add a new toolbar"
@@ -593,9 +587,9 @@ msgid "Shell Scripts"
 msgstr "Δέσμες ενεργειών κέλυφους"
 
 #: ../exo-desktop-item-edit/exo-die-desktop-model.c:326
-#, fuzzy, c-format
+#, c-format
 msgid "Create Launcher <b>%s</b>"
-msgstr "Δημιουργία εκκινητή"
+msgstr "Δημιουργία εκκινητή <b>%s</b>"
 
 #. TRANSLATORS: Label in "Create Launcher"/"Create Link" dialog, make sure to avoid mnemonic conflicts
 #: ../exo-desktop-item-edit/exo-die-editor.c:318
@@ -665,7 +659,6 @@ msgstr ""
 
 #. allocate the icon chooser dialog
 #: ../exo-desktop-item-edit/exo-die-editor.c:591
-#, fuzzy
 msgid "Select an icon"
 msgstr "Επιλογή εικονιδίου"
 
@@ -734,9 +727,9 @@ msgstr "Δεν έχει οριστεί όνομα αρχείου ή φακέλο
 
 #. tell the user that we don't support the type
 #: ../exo-desktop-item-edit/main.c:225
-#, fuzzy, c-format
+#, c-format
 msgid "Unsupported desktop file type \"%s\""
-msgstr "Μη υποστηριζόμενος τύπος αρχείου '%s'"
+msgstr "Μη υποστηριζόμενος τύπος αρχείου \"%s\""
 
 #. add the "Create"/"Save" button (as default)
 #: ../exo-desktop-item-edit/main.c:245
@@ -775,9 +768,8 @@ msgid "Internet"
 msgstr "Διαδίκτυο"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:138
-#, fuzzy
 msgid "Web Browser"
-msgstr "Περιηγητής διαδικτύου Galeon"
+msgstr "Περιηγητής διαδικτύου"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:146
 msgid ""
@@ -788,9 +780,8 @@ msgstr ""
 "για να ανοίγει δεσμούς και περιεχόμενα βοήθειας."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:170
-#, fuzzy
 msgid "Mail Reader"
-msgstr "Προεπιλεγμένη εφαρμογή αλληλογραφίας"
+msgstr "Εφαρμογή αλληλογραφίας"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:178
 msgid ""
@@ -809,9 +800,8 @@ msgid "Utilities"
 msgstr "Εργαλεία"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:211
-#, fuzzy
 msgid "Terminal Emulator"
-msgstr "Προεπιλεγμένο τερματικό"
+msgstr "Εξομοιωτής τερματικού"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:219
 msgid ""
@@ -969,7 +959,7 @@ msgstr "Τερματικό Xfce"
 
 #: ../exo-helper/helpers/aterm.desktop.in.in.h:1
 msgid "aterm"
-msgstr ""
+msgstr "aterm"
 
 #: ../exo-helper/helpers/balsa.desktop.in.in.h:1
 msgid "Balsa"
@@ -985,7 +975,7 @@ msgstr "Προσομοίωση τερματικού Debian"
 
 #: ../exo-helper/helpers/encompass.desktop.in.in.h:1
 msgid "Encompass"
-msgstr ""
+msgstr "Encompass"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.in.h:1
 msgid "Epiphany Web Browser"
@@ -1020,14 +1010,12 @@ msgid "Konqueror Web Browser"
 msgstr "Περιηγητής διαδικτύου Konqueror"
 
 #: ../exo-helper/helpers/links.desktop.in.in.h:1
-#, fuzzy
 msgid "Links Text Browser"
-msgstr "Περιηγητής διαδικτύου Epiphany"
+msgstr "Περιηγητής διαδικτύου Links"
 
 #: ../exo-helper/helpers/lynx.desktop.in.in.h:1
-#, fuzzy
 msgid "Lynx Text Browser"
-msgstr "Περιηγητής διαδικτύου Galeon"
+msgstr "Περιηγητής διαδικτύου Lynx"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.in.h:1
 msgid "Mozilla Browser"
@@ -1043,11 +1031,11 @@ msgstr "Mutt"
 
 #: ../exo-helper/helpers/netscape-navigator.desktop.in.in.h:1
 msgid "Netscape Navigator"
-msgstr ""
+msgstr "Netscape Navigator"
 
 #: ../exo-helper/helpers/nxterm.desktop.in.in.h:1
 msgid "NXterm"
-msgstr ""
+msgstr "NXterm"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.in.h:1
 msgid "Opera Browser"
@@ -1071,12 +1059,11 @@ msgstr "Mozilla Thunderbird"
 
 #: ../exo-helper/helpers/urxvt.desktop.in.in.h:1
 msgid "RXVT Unicode"
-msgstr ""
+msgstr "RXVT Unicode"
 
 #: ../exo-helper/helpers/w3m.desktop.in.in.h:1
-#, fuzzy
 msgid "W3M Text Browser"
-msgstr "Περιηγητής ιστοσελίδων Opera"
+msgstr "Περιηγητής διαδικτύου W3M"
 
 #: ../exo-helper/helpers/xterm.desktop.in.in.h:1
 msgid "X Terminal"
