--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,7 @@
 2006-08-27  Jean-François Wauthy <pollux@xfce.org>
 
 	* cs.po: Updated Czech translations
+	* de.po: Updated German translations
 	* ka.po: Add Georgian translations
 
 2006-08-27  Stavros Giannouris <stavrosg2002@freemail.gr>
